Added adaptive legend rows to plot_glmnet()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(classification_metrics)
 export(coef_tidy)
 export(compute_bias_variance_ETE)
 export(cross_validate_spline)
+export(extract_std_coefs)
 export(fit_spline_models)
 export(generate_spline_data)
 export(knn)
