Cleaned up a few functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(classification_metrics)
 export(coef_tidy)
 export(compute_bias_variance_ETE)
 export(cross_validate_spline)
+export(extract_best_elnet)
 export(extract_std_coefs)
 export(fit_spline_models)
 export(generate_spline_data)
 export(knn)
 export(mixed_cor)
 export(plot_confusion_matrix)
+export(plot_cva_glmnet)
 export(plot_glmnet)
 export(plot_grayscale)
 export(plot_model_history)
